--- a/Part A TempConv/.travis.yml
+++ b/Part A TempConv/.travis.yml
@@ -1,8 +1,10 @@
 language: python
 python:
   - "3.6"
-cache: pip
+  - "3.6-dev"  # 3.6 development branch
+# command to install dependencies
 install:
   - pip install -r requirements.txt
+# command to run tests
 script:
-  - python temperature converter.py
+  - pytest # or py.test for Python versions 3.5 and below
